# libtrace

./: CMakeLists.txt  LICENSE  README.md
.github/workflows/: build.yml  cortex-m3.cmake
docs/: CMakeLists.txt
libs/: CMakeLists.txt
libs/trace/: CMakeLists.txt
libs/trace/include/orbcode/trace/: doc.h  dwt.h  itm.h  tpiu.h
tests/: CMakeLists.txt
tests/cmsis/: README.md
tests/src/: try_compile.c  try_compile.cpp
